@startuml

class WebServer {
  +app: express()
  +get(route: string, callback: function)
  +post(route: string, callback: function)
}

class Database {
  -db: sqlite3.Database
  +run(query: string, params: array, callback: function)
  +get(query: string, params: array, callback: function)
}

class Calendar {
  -UUID: TEXT
  -source: TEXT
  -user: USER
  +formatCalendar(source: string)
  +clearCalendar()
}


class Event {
  -uuid: TEXT
  -summary: TEXT
  -sequence: INTEGER
  -status: STRING
  -transp: STRING
  -rRule: ARRAY
  -dtStart: DATETIME
  -dtEnd: DATETIME
  -drStamp: DATETIME
  -categories: ARRAY
  -location: STRING
  -geo: STRING
  -description: STRING
  -url: STRING

  +formatEvent(event: TEXT)
  +parseEvent(event: TEXT)
  +clearEvent()
}

class User {
  -uuid: TEXT
  -email: STRING
}

class Policy {
  +checkUser(req: Request, res: Response, next: function)
  +checkCalendar(req: Request, res: Response, next: function)
  +checkEvent(req: Request, res: Response, next: function)
}

class Multer {
  +upload: function
}

WebServer -- Multer: Uses
WebServer -- Database: Uses
WebServer -- Calendar: Uses

@enduml
